--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Elcro</title>
+      <title>PopQuiz</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -71,7 +71,7 @@
                      <div class="carousel-item active">
                         <div class="row">
                            <div class="col-md-6">
-                              <h1 class="banner_taital">Light Bulb</h1>
+                              <h1 class="banner_taital">PopQuiz</h1>
                               <p class="banner_text">Search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved</p>
                               <div class="started_text active"><a href="#">Read More</a></div>
                            </div>
@@ -83,7 +83,7 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <h1 class="banner_taital">Light Bulb</h1>
+                              <h1 class="banner_taital">PopQuiz</h1>
                               <p class="banner_text">Search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved</p>
                               <div class="started_text active"><a href="#">Read More</a></div>
                            </div>
@@ -95,7 +95,7 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <h1 class="banner_taital">Light Bulb</h1>
+                              <h1 class="banner_taital">PopQuiz</h1>
                               <p class="banner_text">Search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved</p>
                               <div class="started_text active"><a href="#">Read More</a></div>
                            </div>
