--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                      <div class="carousel-item active">
                         <div class="row">
                            <div class="col-md-6">
-                              <h1 class="banner_taital">PopQuiz</h1>
+                              <h1 class="banner_taital">PopQuiz Test123</h1>
                               <p class="banner_text">Search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved</p>
                               <div class="started_text active"><a href="#">Read More</a></div>
                            </div>
